--- a/package.json
+++ b/package.json
@@ -2,6 +2,25 @@
   "private": true,
   "name": "react-union-project",
   "version": "1.0.0-alpha.1",
+  "description": "The project React-union is the collection of tools that allows you to build modern React applications that run on specific server-side environments such as Content Management Systems or Portals",
+  "keywords": [
+    "react",
+    "redux",
+    "bootstrapper",
+    "cms",
+    "hybrid",
+    "mix",
+    "mixed",
+    "standalone",
+    "sitecore",
+    "liferay",
+    "wordpress",
+    "drupal",
+    "umbraco",
+    "joomla",
+    "magento",
+    "adobe experience manager"
+  ],
   "contributors": [
     "Tomas Konrady <tomas.konrady@lundegaard.eu>"
   ],
