--- a/packages/react-union/package.json
+++ b/packages/react-union/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-union",
-  "version": "1.0.0-alpha.1",
+  "version": "0.1.0",
   "license": "MIT",
   "main": "./lib/index.js",
   "module": "es/index.js",
@@ -35,7 +35,7 @@
     "babel-runtime": "6.23.0",
     "cross-env": "5.1.1",
     "eslint": "4.7.2",
-    "eslint-config-react-union": "1.0.0-alpha.1",
+    "eslint-config-react-union": "0.1.0",
     "eslint-import-resolver-webpack": "0.8.3",
     "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-import": "2.7.0",
