--- a/packages/react-union/package.json
+++ b/packages/react-union/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-union",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "license": "MIT",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -27,19 +27,19 @@
     "babel-core": "6.23.1",
     "babel-eslint": "8.0.1",
     "babel-jest": "21.2.0",
+    "babel-plugin-external-helpers": "6.22.0",
     "babel-plugin-transform-class-properties": "6.23.0",
     "babel-plugin-transform-object-rest-spread": "6.23.0",
     "babel-plugin-transform-react-constant-elements": "6.23.0",
     "babel-plugin-transform-regenerator": "6.22.0",
     "babel-plugin-transform-runtime": "6.22.0",
-    "babel-plugin-external-helpers": "6.22.0",
     "babel-preset-env": "1.2.1",
     "babel-preset-react": "6.23.0",
     "babel-preset-stage-1": "6.22.0",
     "babel-runtime": "6.23.0",
     "cross-env": "5.1.1",
     "eslint": "4.7.2",
-    "eslint-config-react-union": "0.1.0",
+    "eslint-config-react-union": "^0.1.1",
     "eslint-import-resolver-webpack": "0.8.3",
     "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-import": "2.7.0",
