--- a/packages/react-union-boilerplate-basic/package.json
+++ b/packages/react-union-boilerplate-basic/package.json
@@ -2,7 +2,7 @@
   "name": "react-union-boilerplate-basic",
   "private": true,
   "license": "MIT",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "contributors": [
     "Tomas Konrady <tomas.konrady@lundegaard.eu>"
   ],
@@ -35,7 +35,7 @@
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-hot-loader": "^3.0.0-beta.2",
-    "react-union": "0.1.0",
+    "react-union": "^0.1.1",
     "redbox-react": "1.5.0"
   },
   "devDependencies": {
@@ -43,12 +43,12 @@
     "babel-jest": "21.2.0",
     "babel-preset-react": "6.23.0",
     "eslint": "4.7.2",
-    "eslint-config-react-union": "0.1.0",
+    "eslint-config-react-union": "^0.1.1",
     "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-react": "7.4.0",
     "jest": "21.2.1",
-    "react-union-scripts": "^0.1.0",
+    "react-union-scripts": "^0.1.1",
     "skin-deep": "1.2.0"
   },
   "scripts": {
