Boilerplates to own directory

--- a/lerna.json
+++ b/lerna.json
@@ -5,9 +5,13 @@
     "init": {
       "exact": true
     },
-    "bootstrap": {
-      "npmClient": "yarn",
-      "useWorkspaces": true
+    "publish": {
+      "ignore": [
+        "*.md",
+        "test/**"
+      ]
     }
-  }
+  },
+  "npmClient": "yarn",
+  "useWorkspaces": true
 }
