--- a/boilerplates/react-union-boilerplate-basic/package.json
+++ b/boilerplates/react-union-boilerplate-basic/package.json
@@ -12,7 +12,7 @@
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-hot-loader": "^3.0.0-beta.2",
-    "react-union": "^0.1.1",
+    "react-union": "^0.1.3",
     "redbox-react": "1.5.0"
   },
   "devDependencies": {
@@ -25,6 +25,7 @@
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-react": "7.4.0",
     "jest": "21.2.1",
+    "react-test-renderer": "16.2.0",
     "react-union-scripts": "^0.1.1",
     "skin-deep": "1.2.0"
   },
