--- a/packages/react-union-scripts/package.json
+++ b/packages/react-union-scripts/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "babel-cli": "6.23.0",
     "babel-core": "6.23.1",
+    "babel-jest": "21.2.0",
     "babel-loader": "6.4.0",
     "babel-plugin-transform-class-properties": "6.23.0",
     "babel-plugin-transform-object-rest-spread": "6.23.0",
@@ -48,6 +49,7 @@
     "node-sass": "^4.5.3",
     "ramda": "0.25.0",
     "raw-loader": "^0.5.1",
+    "react-test-renderer": "16.2.0",
     "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
     "style-loader": "0.18.2",
