--- a/boilerplates/react-union-boilerplate-basic/package.json
+++ b/boilerplates/react-union-boilerplate-basic/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-union-boilerplate-basic",
+  "version": "0.0.0",
   "private": true,
   "license": "MIT",
   "repository": "https://github.com/lundegaard/react-union",
