--- a/packages/react-union-scripts/package.json
+++ b/packages/react-union-scripts/package.json
@@ -59,5 +59,12 @@
     "webpack-dev-middleware": "1.12.0",
     "webpack-hot-middleware": "2.19.1",
     "webpack-manifest-plugin": "1.3.2"
+  },
+  "devDependencies": {
+    "babel-eslint": "8.0.1",
+    "eslint": "4.7.2",
+    "eslint-plugin-babel": "4.1.2",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-react": "7.4.0"
   }
 }
