--- a/boilerplates/react-union-boilerplate-basic/package.json
+++ b/boilerplates/react-union-boilerplate-basic/package.json
@@ -20,10 +20,12 @@
     "babel-eslint": "8.0.1",
     "babel-preset-react": "6.23.0",
     "eslint": "4.7.2",
-    "eslint-config-react-union": "^0.1.1",
+    "eslint-config-react-union": "0.1.3",
     "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-prettier": "2.6.0",
     "eslint-plugin-react": "7.4.0",
+    "prettier": "1.10.2",
     "react-union-scripts": "^0.1.5",
     "skin-deep": "1.2.0"
   },
