--- a/package.json
+++ b/package.json
@@ -27,17 +27,28 @@
   "repository": "https://github.com/lundegaard/react-union",
   "license": "UNLICENSED",
   "devDependencies": {
-    "eslint": "4.3.0",
+    "babel-eslint": "8.0.1",
+    "eslint": "4.17.0",
+    "prettier": "1.10.2",
+    "eslint-config-prettier": "2.9.0",
+    "eslint-config-react-union": "0.1.3",
+    "eslint-import-resolver-webpack": "0.8.3",
+    "eslint-plugin-babel": "4.1.2",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-prettier": "2.6.0",
+    "eslint-plugin-react": "7.4.0",
     "lerna": "2.2.0",
     "rimraf": "2.6.2"
   },
   "workspaces": [
-    "packages/*", 
+    "packages/*",
     "boilerplates/*"
   ],
   "scripts": {
     "bootstrap": "yarn config set workspaces-experimental true && lerna bootstrap",
-    "example:basic": "cd ./boilerplates/react-union-boilerplate-basic && yarn start"
+    "example:basic": "cd ./boilerplates/react-union-boilerplate-basic && yarn start",
+    "lint": "eslint \"packages/**/*.js\" \"boilerplates/**/*.js\" --cache",
+    "lint:fix": "yarn lint --fix"
   },
   "author": "Tomas Konrady <tomas.konrady@lundegaard.eu>"
 }
