--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "prettier": "1.10.2",
     "eslint-config-prettier": "2.9.0",
     "eslint-config-react-union": "0.1.3",
-    "eslint-plugin-babel": "^4.0.0",
-    "eslint-plugin-import": "^2.0.0",
-    "eslint-plugin-prettier": "^2.0.0",
-    "eslint-plugin-react": "^7.0.0",
+    "eslint-plugin-babel": "4.1.2",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-prettier": "2.6.0",
+    "eslint-plugin-react": "7.4.0",
     "lerna": "2.2.0",
     "rimraf": "2.6.2"
   },
