--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "react-union-project",
   "version": "0.1.0",
-  "description": "The project React-union is the collection of tools that allows you to build modern React applications that run on specific server-side environments such as Content Management Systems or Portals",
+  "description": "The project React-union is a collection of tools that allows you to build modern React applications which run on specific server-side environments such as Content Management Systems or portals.",
   "keywords": [
     "react",
     "redux",
