Simplified component structure and remove support for React v15

--- a/packages/react-union/package.json
+++ b/packages/react-union/package.json
@@ -51,8 +51,8 @@
     "rollup-plugin-uglify": "2.0.1"
   },
   "peerDependencies": {
-    "react": "^15.3.0 || ^16.0.0",
-    "react-dom": "^15.3.0 || ^16.0.0"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   },
   "scripts": {
     "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib",
