public directories availbale in proxy

--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "rimraf": "2.6.2"
   },
   "workspaces": [
-    "packages/*", 
+    "packages/*",
     "boilerplates/*"
   ],
   "scripts": {
-    "bootstrap": "yarn config set workspaces-experimental true && lerna bootstrap",
+    "bootstrap": "lerna bootstrap",
     "example:basic": "cd ./boilerplates/react-union-boilerplate-basic && yarn start"
   },
   "author": "Tomas Konrady <tomas.konrady@lundegaard.eu>"
