Added feature to use public folder for static assets. works with proxy, dev server and build.

--- a/boilerplates/react-union-boilerplate-basic/package.json
+++ b/boilerplates/react-union-boilerplate-basic/package.json
@@ -30,8 +30,8 @@
     "skin-deep": "1.2.0"
   },
   "scripts": {
-    "build": "union-scripts build",
-    "start": "union-scripts start --app SampleApp",
+    "build": "react-union-scripts build",
+    "start": "react-union-scripts start --app SampleApp",
     "test": "yarn lint && yarn test:js",
     "test:js": "react-union-scripts test",
     "lint": "yarn lint:eslint",
