--- a/packages/react-union-scripts/package.json
+++ b/packages/react-union-scripts/package.json
@@ -36,21 +36,21 @@
     "clean-webpack-plugin": "0.1.17",
     "connect-history-api-fallback": "1.3.0",
     "cross-env": "2.0.0",
-    "css-loader": "^0.28.7",
+    "css-loader": "0.28.7",
     "del": "2.2.2",
     "file-loader": "0.11.2",
-    "fs-extra": "^0.30.0",
+    "fs-extra": "0.30.0",
     "html-webpack-plugin": "2.30.1",
-    "humps": "2.0.0",
     "invariant": "2.2.1",
     "jest": "21.2.1",
-    "mkdirp": "^0.5.1",
+    "mkdirp": "0.5.1",
     "ncp": "2.0.0",
-    "node-sass": "^4.5.3",
+    "node-sass": "4.5.3",
     "ramda": "0.25.0",
-    "raw-loader": "^0.5.1",
-    "resolve-url-loader": "^2.1.0",
-    "sass-loader": "^6.0.6",
+    "ramda-extension": "0.3.1",
+    "raw-loader": "0.5.1",
+    "resolve-url-loader": "2.1.0",
+    "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "url-loader": "0.5.9",
     "webpack": "3.6.0",
