--- a/package.json
+++ b/package.json
@@ -51,13 +51,13 @@
     "example:basic": "cd ./boilerplates/react-union-boilerplate-basic && yarn start",
     "lint": "eslint \"packages/**/*.js\" \"boilerplates/**/*.js\" --cache",
     "lint:fix": "yarn lint --fix",
-    "pretty": "prettier --write ./packages/**/*.js ./boilerplates/**/*.js && yarn lint:fix",
+    "pretty": "prettier --write",
     "precommit": "lint-staged",
     "prepush": "yarn lint"
   },
   "lint-staged": {
     "(packages|boilerplates)/**/*.js": [
-      "yarn pretty",
+      "yarn lint:fix",
       "git add"
     ]
   }
