--- a/packages/react-union/package.json
+++ b/packages/react-union/package.json
@@ -7,7 +7,8 @@
   "jsnext:main": "es/index.js",
   "repository": "https://github.com/lundegaard/react-union",
   "contributors": [
-    "Tomas Konrady <tomas.konrady@lundegaard.eu>"
+    "Tomas Konrady <tomas.konrady@lundegaard.eu>",
+    "Vaclav Jancarik <vaclav.jancarik@lundegaard.eu>"
   ],
   "description": "Component for assembling distributed HTML fragments into one logic React application",
   "engines": {
