--- a/boilerplates/react-union-boilerplate-basic/package.json
+++ b/boilerplates/react-union-boilerplate-basic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-union-boilerplate-basic",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "license": "MIT",
   "repository": "https://github.com/lundegaard/react-union",
@@ -13,20 +13,20 @@
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-hot-loader": "^3.0.0-beta.2",
-    "react-union": "^0.1.3",
+    "react-union": "^0.2.0",
     "redbox-react": "1.5.0"
   },
   "devDependencies": {
     "babel-eslint": "8.0.1",
     "babel-preset-react": "6.23.0",
     "eslint": "4.7.2",
-    "eslint-config-react-union": "0.1.3",
+    "eslint-config-react-union": "^0.2.0",
     "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-prettier": "2.6.0",
     "eslint-plugin-react": "7.4.0",
     "prettier": "1.10.2",
-    "react-union-scripts": "^0.1.5",
+    "react-union-scripts": "^0.2.0",
     "skin-deep": "1.2.0"
   },
   "scripts": {
