--- a/packages/react-union/package.json
+++ b/packages/react-union/package.json
@@ -41,6 +41,7 @@
     "babel-preset-stage-1": "6.22.0",
     "babel-runtime": "6.23.0",
     "cross-env": "5.1.1",
+    "eslint": "4.17.0",
     "jest": "21.2.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -61,7 +62,7 @@
     "build:umd": "cross-env BABEL_ENV=rollup NODE_ENV=development rollup -c -o dist/react-union.js",
     "build:umd:min": "cross-env BABEL_ENV=rollup NODE_ENV=production rollup -c -o dist/react-union.min.js",
     "build": "yarn build:commonjs && yarn build:es && yarn build:umd && yarn build:umd:min",
-    "test": "yarn format && yarn lint:js",
+    "test": "yarn lint:js",
     "prepublish": "yarn test && yarn build",
     "format": "prettier --write \"src/**/*.js\"",
     "lint:js": "eslint --fix --ext .js \"src/**\""
