--- a/packages/react-union-scripts/package.json
+++ b/packages/react-union-scripts/package.json
@@ -38,7 +38,7 @@
     "browser-sync": "2.23.6",
     "bundle-loader": "0.5.5",
     "clean-webpack-plugin": "0.1.17",
-    "connect-history-api-fallback": "1.3.0",
+    "connect-history-api-fallback": "^1.5.0",
     "cross-env": "2.0.0",
     "css-loader": "0.28.7",
     "del": "2.2.2",
