--- a/boilerplates/react-union-boilerplate-liferay-basic/package.json
+++ b/boilerplates/react-union-boilerplate-liferay-basic/package.json
@@ -32,7 +32,7 @@
   },
   "scripts": {
     "build": "react-union-scripts build",
-    "build:liferay": "react-union-scripts build --release --target liferay",
+    "build:liferay": "react-union-scripts build --target liferay",
     "start": "react-union-scripts start --app SampleApp",
     "start:proxy": "react-union-scripts start --app SampleApp --proxy --target liferay",
     "test": "yarn lint && yarn test:js",
