--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "example:basic": "cd boilerplates/react-union-boilerplate-basic && yarn start",
-    "lint": "eslint \"packages/**/*.js\" \"boilerplates/**/*.js\"",
+    "lint": "eslint \"packages/**/*.js\" \"boilerplates/**/*.js\" --cache",
     "lint:fix": "yarn lint --fix",
     "postinstall": "cd packages/react-union && yarn build",
     "precommit": "lint-staged",
