--- a/boilerplates/react-union-boilerplate-liferay-basic/.gitignore
+++ b/boilerplates/react-union-boilerplate-liferay-basic/.gitignore
@@ -13,3 +13,22 @@ jsconfig.json
 
 # OS files
 .DS_STORE
+
+### Gradle ###
+.gradle
+**/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
+
+
+# End of https://www.gitignore.io/api/osx,node,linux,gradle,eclipse,windows,intellij,webstorm,sublimetext,visualstudiocode
