theme metadata and portlet title added

--- a/boilerplates/react-union-boilerplate-liferay-basic/hero-portlet/src/main/resources/content/Language.properties
+++ b/boilerplates/react-union-boilerplate-liferay-basic/hero-portlet/src/main/resources/content/Language.properties
@@ -1,5 +1,5 @@
-javax.portlet.display-name.hero-portlet=hero-portlet JSP
-javax.portlet.keywords.hero-portlet=hero-portlet,jsp
-javax.portlet.short-title.hero-portlet=hero-portlet JSP
-javax.portlet.title.hero-portlet=hero-portlet JSP Portlet
-hero-portlet.caption=Hello from hero-portlet JSP!
+javax.portlet.display-name.eu_reactunion_boilerplate_portlet_Hero=Hero portlet
+javax.portlet.keywords.eu_reactunion_boilerplate_portlet_Hero=hero-portlet,jsp
+javax.portlet.short-title.eu_reactunion_boilerplate_portlet_Hero=Hero portlet
+javax.portlet.title.eu_reactunion_boilerplate_portlet_Hero=Hero portlet
+hero-portlet.caption=Hero portlet!
