--- a/boilerplates/react-union-boilerplate-liferay-basic/liferay-theme/src/WEB-INF/liferay-plugin-package.properties
+++ b/boilerplates/react-union-boilerplate-liferay-basic/liferay-theme/src/WEB-INF/liferay-plugin-package.properties
@@ -1,13 +1,13 @@
-name=Liferay Theme
-module-group-id=liferay
+name=React Union Liferay Theme
+module-group-id=react-union
 module-incremental-version=1
 tags=
 short-description=
 long-description=
 change-log=
-page-url=http://www.liferay.com
-author=Liferay, Inc.
-licenses=LGPL
+page-url=https://github.com/lundegaard/react-union
+author=React Union
+licenses=MIT
 liferay-versions=7.0.0+
 
 
