--- a/boilerplates/react-union-boilerplate-liferay-basic/hero-portlet/gradle/wrapper/gradle-wrapper.properties
+++ b/boilerplates/react-union-boilerplate-liferay-basic/hero-portlet/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Thu Aug 18 11:52:36 CDT 2016
+#Tue May 15 10:31:15 CEST 2018
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-3.0-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.0-all.zip
