all 3 projects are built by one gradle build

--- a/boilerplates/react-union-boilerplate-liferay-basic/liferay-theme/build.gradle
+++ b/boilerplates/react-union-boilerplate-liferay-basic/liferay-theme/build.gradle
@@ -16,6 +16,9 @@ node {
     download = true
 }
 
+// build first react-app
+gulp_build.dependsOn(rootProject.tasks.build)
+
 // makes sure on each build that gulp is installed
 gulp_build.dependsOn 'installGulp'
 
