--- a/boilerplates/react-union-boilerplate-liferay-basic/react-union-taglib/build.gradle
+++ b/boilerplates/react-union-boilerplate-liferay-basic/react-union-taglib/build.gradle
@@ -1,9 +1,11 @@
 buildscript {
 	dependencies {
-		classpath group: "com.liferay", name: "com.liferay.gradle.plugins", version: "3.3.9"
+		classpath group: "com.liferay", name: "com.liferay.gradle.plugins.defaults", version: "latest.release"
 	}
 
 	repositories {
+		mavenLocal()
+
 		maven {
 			url "https://cdn.lfrs.sl/repository.liferay.com/nexus/content/groups/public"
 		}
@@ -14,15 +16,12 @@ apply plugin: "com.liferay.plugin"
 
 dependencies {
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.0.0"
-	compileOnly group: "com.liferay.portal", name: "com.liferay.util.taglib", version: "2.0.0"
-	compileOnly group: "com.liferay", name: "com.liferay.portal.configuration.metatype", version: "2.0.0"
+	compileOnly group: "com.liferay.portal", name: "com.liferay.util.taglib", version: "2.8.0"
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "2.0"
 	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
+	compileOnly group: "javax.servlet.jsp", name: "javax.servlet.jsp-api", version: "2.3.1"
 	compileOnly group: "jstl", name: "jstl", version: "1.2"
-	compileOnly group: "org.osgi", name: "osgi.cmpn", version: "6.0.0"
-	compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.5.0"
-	compile project(':react-union-support')
-	compile project(':react-union-taglib')
+	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 }
 
 repositories {
