--- a/boilerplates/react-union-boilerplate-liferay-basic/settings.gradle
+++ b/boilerplates/react-union-boilerplate-liferay-basic/settings.gradle
@@ -2,3 +2,5 @@ rootProject.name = 'react-app'
 
 include 'liferay-theme'
 include 'hero-portlet'
+include 'react-union-support'
+include 'react-union-taglib'
