--- a/boilerplates/react-union-boilerplate-liferay-basic/hero-portlet/build.gradle
+++ b/boilerplates/react-union-boilerplate-liferay-basic/hero-portlet/build.gradle
@@ -21,8 +21,8 @@ dependencies {
 	compileOnly group: "jstl", name: "jstl", version: "1.2"
 	compileOnly group: "org.osgi", name: "osgi.cmpn", version: "6.0.0"
 	compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.5.0"
-	compile project(':react-union-support')
-	compile project(':react-union-taglib')
+	implementation project(':react-union-support')
+	implementation project(':react-union-taglib')
 }
 
 repositories {
