--- a/boilerplates/react-union-boilerplate-liferay-basic/react-union-support/build.gradle
+++ b/boilerplates/react-union-boilerplate-liferay-basic/react-union-support/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "2.0"
 	compileOnly group: "com.fasterxml.jackson.core", name: "jackson-databind", version: "2.9.5"
+	compileOnly group: "org.slf4j", name: "slf4j-api", version: "1.7.25"
 }
 
 repositories {
