--- a/boilerplates/react-union-boilerplate-liferay-basic/package.json
+++ b/boilerplates/react-union-boilerplate-liferay-basic/package.json
@@ -21,14 +21,15 @@
     "babel-eslint": "8.0.1",
     "babel-preset-react": "6.23.0",
     "eslint": "4.7.2",
-    "eslint-config-react-union": "^0.2.0",
     "eslint-config-prettier": "^2.9.0",
+    "eslint-config-react-union": "^0.2.0",
     "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-prettier": "2.6.0",
     "eslint-plugin-react": "7.4.0",
     "prettier": "1.10.2",
     "react-union-scripts": "^0.3.0",
+    "react-test-renderer": "16.4.1",
     "skin-deep": "1.2.0"
   },
   "scripts": {
