--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: node_js
+node_js:
+  - 8
 cache:
   yarn: true
   directories:
     - node_modules
-node_js:
-  - "node"
-  - "8"
+script:
+  node ./scripts/CI/repoIntegrity.js
