--- a/packages/react-union-scripts/package.json
+++ b/packages/react-union-scripts/package.json
@@ -63,7 +63,8 @@
     "webpack-bundle-analyzer": "2.13.1",
     "webpack-dev-middleware": "3.1.3",
     "webpack-hot-middleware": "2.22.2",
-    "webpack-manifest-plugin": "2.0.3"
+    "webpack-manifest-plugin": "2.0.3",
+    "webpack-merge": "^4.1.3"
   },
   "devDependencies": {
     "react": "^16.4.1",
