--- a/boilerplates/react-union-boilerplate-liferay-basic/liferay-amd-loader/build.gradle
+++ b/boilerplates/react-union-boilerplate-liferay-basic/liferay-amd-loader/build.gradle
@@ -9,19 +9,14 @@ buildscript {
 		}
 	}
 }
-
 apply plugin: "com.liferay.plugin"
 
 dependencies {
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.0.0"
-	compileOnly group: "com.liferay.portal", name: "com.liferay.util.taglib", version: "2.0.0"
-	compileOnly group: "com.liferay", name: "com.liferay.portal.configuration.metatype", version: "2.0.0"
-	compileOnly group: "javax.portlet", name: "portlet-api", version: "2.0"
-	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
-	compileOnly group: "jstl", name: "jstl", version: "1.2"
+	compileOnly group: 'com.liferay.webjars', name: 'liferay-amd-loader', version: '1.4.1'
 	compileOnly group: "org.osgi", name: "osgi.cmpn", version: "6.0.0"
-	compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.5.0"
 }
+
 
 repositories {
 	mavenLocal()
@@ -30,3 +25,14 @@ repositories {
 		url "https://cdn.lfrs.sl/repository.liferay.com/nexus/content/groups/public"
 	}
 }
+
+task deleteResources(type:Delete) {
+    delete fileTree('src/main/resources/META-INF/resources').include('**/*')
+}
+
+task copyResources(type: Copy, dependsOn: deleteResources) {
+    from '../build/loader'
+    into 'src/main/resources/META-INF/resources'
+}
+
+build.dependsOn(copyResources)
