--- a/boilerplates/react-union-boilerplate-liferay-basic/package.json
+++ b/boilerplates/react-union-boilerplate-liferay-basic/package.json
@@ -26,13 +26,15 @@
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-prettier": "2.6.0",
     "eslint-plugin-react": "7.4.0",
+    "mkdirp": "0.5.1",
     "prettier": "1.10.2",
     "react-union-scripts": "^0.3.0",
+    "rimraf": "2.6.2",
     "skin-deep": "1.2.0"
   },
   "scripts": {
     "build": "react-union-scripts build",
-    "build:liferay": "react-union-scripts build --target liferay",
+    "build:liferay": "react-union-scripts build --release --target liferay && node ./tools/amdLoaderScripts.js SampleApp",
     "start": "react-union-scripts start --app SampleApp",
     "start:proxy": "react-union-scripts start --app SampleApp --proxy --target liferay",
     "test": "yarn lint && yarn test:js",
