--- a/boilerplates/react-union-boilerplate-basic/package.json
+++ b/boilerplates/react-union-boilerplate-basic/package.json
@@ -20,13 +20,13 @@
     "babel-eslint": "8.0.1",
     "babel-preset-react": "6.23.0",
     "eslint": "4.7.2",
-    "eslint-config-prettier": "2.9.0",
     "eslint-config-react-union": "0.2.0",
     "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-prettier": "2.6.0",
     "eslint-plugin-react": "7.4.0",
-    "prettier": "1.10.2",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.2.0",
+    "prettier": "^1.13.5",
     "react-test-renderer": "16.4.1",
     "react-union-scripts": "0.3.0",
     "skin-deep": "1.2.0"
@@ -37,6 +37,15 @@
     "test": "yarn lint && yarn test:js",
     "test:js": "react-union-scripts test",
     "lint": "yarn lint:eslint",
-    "lint:eslint": "eslint --ext .js ./"
+    "lint:eslint": "eslint --ext .js ./",
+    "precommit": "lint-staged",
+    "prepush": "yarn lint"
+  },
+  "lint-staged": {
+    "**/*.js": [
+      "prettier --write",
+      "yarn lint --fix",
+      "git add"
+    ]
   }
 }
