--- a/package.json
+++ b/package.json
@@ -24,24 +24,23 @@
   "author": "Tomas Konrady <tomas.konrady@lundegaard.eu>",
   "contributors": [
     "Tomas Konrady <tomas.konrady@lundegaard.eu>",
-	  "Vaclav Jancarik <vaclav.jancarik@lundegaard.eu>",
-	  "Lukas Sulik <lukas.sulik@lundegaard.eu>"
+    "Vaclav Jancarik <vaclav.jancarik@lundegaard.eu>",
+    "Lukas Sulik <lukas.sulik@lundegaard.eu>",
+    "Jakub Kohout <jakub.kohout@lundegaard.eu>"
   ],
   "repository": "https://github.com/lundegaard/react-union",
   "license": "UNLICENSED",
   "devDependencies": {
     "babel-eslint": "8.0.1",
     "eslint": "4.17.0",
-    "eslint-config-prettier": "2.9.0",
     "eslint-config-react-union": "0.1.3",
     "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-prettier": "2.6.0",
     "eslint-plugin-react": "7.4.0",
-    "husky": "0.14.3",
     "lerna": "2.2.0",
-    "lint-staged": "7.0.0",
-    "prettier": "1.10.2",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.2.0",
+    "prettier": "^1.13.5",
     "rimraf": "2.6.2"
   },
   "workspaces": [
@@ -50,15 +49,18 @@
   ],
   "scripts": {
     "example:basic": "cd boilerplates/react-union-boilerplate-basic && yarn start",
-    "lint": "eslint \"packages/**/*.js\" \"boilerplates/**/*.js\"",
+    "lint": "eslint \"packages/*.js\" \"packages/**/*.js\" \"boilerplates/**/*.js\"",
     "lint:fix": "yarn lint --fix",
     "postinstall": "cd packages/react-union && yarn build",
     "precommit": "lint-staged",
     "prepush": "yarn lint",
-    "publishAll": "lerna publish"
+    "publishAll": "lerna publish",
+    "pretty": "prettier --write \"packages/*.js\" \"packages/**/*.js\" \"boilerplates/**/*.js\"",
+    "format": "yarn pretty && yarn lint:fix"
   },
   "lint-staged": {
     "(packages|boilerplates)/**/*.js": [
+      "prettier --write",
       "yarn lint:fix",
       "git add"
     ]
