--- a/packages/eslint-config-react-union/package.json
+++ b/packages/eslint-config-react-union/package.json
@@ -11,21 +11,15 @@
   "devDependencies": {
     "babel-eslint": "8.0.1",
     "eslint": "4.7.2",
-    "eslint-config-prettier": "2.9.0",
     "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-prettier": "2.6.0",
-    "eslint-plugin-react": "7.4.0",
-    "prettier": "1.10.2"
+    "eslint-plugin-react": "7.4.0"
   },
   "peerDependencies": {
     "babel-eslint": "^8.0.0",
     "eslint": "^4.0.0",
-    "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-babel": "^4.0.0",
     "eslint-plugin-import": "^2.0.0",
-    "eslint-plugin-prettier": "^2.0.0",
-    "eslint-plugin-react": "^7.0.0",
-    "prettier": "^1.0.0"
+    "eslint-plugin-react": "^7.0.0"
   }
 }
