--- a/boilerplates/react-union-boilerplate-liferay-basic/package.json
+++ b/boilerplates/react-union-boilerplate-liferay-basic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-union-boilerplate-liferay-basic",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "license": "MIT",
   "repository": "https://github.com/lundegaard/react-union",
@@ -14,14 +14,14 @@
     "react": "16.4.1",
     "react-dom": "16.4.1",
     "react-hot-loader": "4.3.3",
-    "react-union": "0.2.0",
+    "react-union": "^0.3.0",
     "redbox-react": "1.6.0"
   },
   "devDependencies": {
     "babel-eslint": "8.0.1",
     "babel-preset-react": "6.23.0",
     "eslint": "4.7.2",
-    "eslint-config-react-union": "0.2.0",
+    "eslint-config-react-union": "^0.3.0",
     "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-react": "7.4.0",
@@ -29,7 +29,7 @@
     "lint-staged": "^7.2.0",
     "prettier": "^1.13.5",
     "react-test-renderer": "16.4.1",
-    "react-union-scripts": "0.3.0",
+    "react-union-scripts": "^0.4.0",
     "skin-deep": "1.2.0"
   },
   "scripts": {
