--- a/packages/react-union-scripts/package.json
+++ b/packages/react-union-scripts/package.json
@@ -44,6 +44,7 @@
     "del": "2.2.2",
     "file-loader": "1.1.11",
     "fs-extra": "0.30.0",
+    "glob": "7.1.2",
     "html-webpack-plugin": "3.2.0",
     "invariant": "2.2.1",
     "jest": "22.4.3",
