--- a/boilerplates/react-union-boilerplate-basic/package.json
+++ b/boilerplates/react-union-boilerplate-basic/package.json
@@ -19,6 +19,9 @@
   "devDependencies": {
     "babel-eslint": "8.0.1",
     "babel-preset-react": "6.23.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.4",
     "eslint": "4.7.2",
     "eslint-config-react-union": "^0.4.0",
     "eslint-plugin-babel": "4.1.2",
@@ -27,9 +30,7 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
     "prettier": "^1.13.5",
-    "react-test-renderer": "16.4.1",
-    "react-union-scripts": "^0.4.0",
-    "skin-deep": "1.2.0"
+    "react-union-scripts": "^0.4.0"
   },
   "scripts": {
     "build": "react-union-scripts build",
@@ -40,6 +41,11 @@
     "lint:eslint": "eslint --ext .js ./",
     "precommit": "lint-staged",
     "prepush": "yarn lint"
+  },
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   },
   "lint-staged": {
     "**/*.js": [
