--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-react": "7.4.0",
     "husky": "^0.14.3",
-    "jest": "^23.2.0",
+    "jest": "23.2.0",
     "lerna": "2.2.0",
     "lint-staged": "^7.2.0",
     "prettier": "^1.13.5",
