added new test support to boilerplate-monorepo

--- a/boilerplates/react-union-boilerplate-monorepo/package.json
+++ b/boilerplates/react-union-boilerplate-monorepo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-union-boilerplate-monorepo",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "private": true,
   "license": "MIT",
   "repository": "https://github.com/lundegaard/react-union",
@@ -10,6 +10,9 @@
   "devDependencies": {
     "babel-eslint": "8.0.1",
     "babel-preset-react": "6.23.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.4",
     "eslint": "4.7.2",
     "eslint-config-prettier": "2.9.0",
     "eslint-config-react-union": "0.2.0",
@@ -18,7 +21,7 @@
     "eslint-plugin-prettier": "2.6.0",
     "eslint-plugin-react": "7.4.0",
     "prettier": "1.10.2",
-    "react-union-scripts": "0.3.0"
+    "react-union-scripts": "^0.4.0"
   },
   "scripts": {
     "build": "react-union-scripts build",
@@ -28,5 +31,12 @@
     "lint": "yarn lint:eslint",
     "lint:eslint": "eslint --ext .js ./"
   },
-  "workspaces": ["packages/*"]
+  "workspaces": [
+    "packages/*"
+  ],
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
+  }
 }
