--- a/boilerplates/react-union-boilerplate-monorepo/packages/union-widget-hero/package.json
+++ b/boilerplates/react-union-boilerplate-monorepo/packages/union-widget-hero/package.json
@@ -13,7 +13,6 @@
     "react-dom": "16.0.0"
   },
   "devDependencies": {
-    "react-test-renderer": "16.4.1",
-    "skin-deep": "1.2.0"
+    "enzyme": "^3.3.0"
   }
 }
