--- a/boilerplates/react-union-boilerplate-liferay-basic/package.json
+++ b/boilerplates/react-union-boilerplate-liferay-basic/package.json
@@ -38,12 +38,11 @@
     "build:liferay": "react-union-scripts build --target liferay",
     "start": "react-union-scripts start --app SampleApp",
     "start:proxy": "react-union-scripts start --app SampleApp --proxy --target liferay",
-    "test": "yarn lint && yarn test:js",
-    "test:js": "react-union-scripts test",
+    "test": "react-union-scripts test",
     "lint": "yarn lint:eslint",
     "lint:eslint": "eslint --ext .js ./",
     "precommit": "lint-staged",
-    "prepush": "yarn lint"
+    "prepush": "yarn lint && yarn test --release"
   },
   "lint-staged": {
     "**/*.js": [
