--- a/boilerplates/react-union-boilerplate-monorepo/package.json
+++ b/boilerplates/react-union-boilerplate-monorepo/package.json
@@ -7,6 +7,9 @@
   "engines": {
     "node": ">=8"
   },
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
     "babel-eslint": "8.0.1",
     "babel-preset-react": "6.23.0",
@@ -14,26 +17,31 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
     "eslint": "4.7.2",
-    "eslint-config-prettier": "2.9.0",
-    "eslint-config-react-union": "0.2.0",
+    "eslint-config-react-union": "0.4.0",
     "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-prettier": "2.6.0",
     "eslint-plugin-react": "7.4.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.2.0",
     "prettier": "1.10.2",
     "react-union-scripts": "^0.5.0"
   },
   "scripts": {
     "build": "react-union-scripts build",
     "start": "react-union-scripts start --app union-app-sample-app",
-    "test": "yarn lint && yarn test:js",
-    "test:js": "react-union-scripts test",
+    "test": "react-union-scripts test",
     "lint": "yarn lint:eslint",
-    "lint:eslint": "eslint --ext .js ./"
+    "lint:eslint": "eslint --ext .js ./",
+    "precommit": "lint-staged",
+    "prepush": "yarn lint && yarn test --release"
   },
-  "workspaces": [
-    "packages/*"
-  ],
+  "lint-staged": {
+    "**/*.js": [
+      "prettier --write",
+      "yarn lint --fix",
+      "git add"
+    ]
+  },
   "jest": {
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
