--- a/packages/react-union/package.json
+++ b/packages/react-union/package.json
@@ -41,6 +41,7 @@
     "babel-preset-stage-1": "6.22.0",
     "babel-runtime": "6.23.0",
     "cross-env": "5.1.1",
+    "enzyme": "^3.3.0",
     "eslint": "4.17.0",
     "jest": "23.2.0",
     "react": "^16.4.1",
