--- a/packages/react-union/package.json
+++ b/packages/react-union/package.json
@@ -44,6 +44,7 @@
     "enzyme": "^3.3.0",
     "eslint": "4.17.0",
     "jest": "23.2.0",
+    "jsdom": "^11.11.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "rollup": "0.52.0",
