--- a/boilerplates/react-union-boilerplate-liferay-basic/package.json
+++ b/boilerplates/react-union-boilerplate-liferay-basic/package.json
@@ -14,6 +14,7 @@
     "react": "16.4.1",
     "react-dom": "16.4.1",
     "react-hot-loader": "4.3.3",
+    "react-loadable": "5.4.0",
     "react-union": "^0.3.0",
     "redbox-react": "1.6.0"
   },
