--- a/packages/react-union-scripts/package.json
+++ b/packages/react-union-scripts/package.json
@@ -42,6 +42,7 @@
     "fs-extra": "0.30.0",
     "glob": "7.1.2",
     "html-webpack-plugin": "3.2.0",
+    "http-proxy-middleware": "^0.18.0",
     "invariant": "2.2.1",
     "jest": "23.2.0",
     "mkdirp": "0.5.1",
