--- a/boilerplates/react-union-boilerplate-liferay-basic/hero-portlet/src/main/resources/configuration/eu.reactunion.boilerplate.configuration.HeroConfiguration.properties
+++ b/boilerplates/react-union-boilerplate-liferay-basic/hero-portlet/src/main/resources/configuration/eu.reactunion.boilerplate.configuration.HeroConfiguration.properties
@@ -1,2 +1,2 @@
 heading=Welcome from Liferay portal
-content=This is a sample content from Liferay portal.
+content=This is sample Liferay portal content.
