--- a/packages/react-union-scripts/package.json
+++ b/packages/react-union-scripts/package.json
@@ -37,6 +37,7 @@
     "cross-env": "2.0.0",
     "css-loader": "0.28.11",
     "del": "2.2.2",
+    "extract-css-chunks-webpack-plugin": "3.0.11",
     "file-loader": "1.1.11",
     "fs-extra": "0.30.0",
     "glob": "7.1.2",
