Use object as a webpack pair, build clarity improvements

--- a/packages/react-union-ssr-server/package.json
+++ b/packages/react-union-ssr-server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-union-ssr-server",
   "version": "0.1.0",
-  "description": "Server-side rendering for React-union",
+  "description": "HTTP server for server-side rendering.",
   "main": "src/index.js",
   "repository": "https://github.com/lundegaard/react-union",
   "contributors": [
