--- a/packages/react-union-ssr-server/package.json
+++ b/packages/react-union-ssr-server/package.json
@@ -12,6 +12,8 @@
     "cheerio": "1.0.0-rc.2",
     "koa": "2.5.1",
     "koa-bodyparser": "4.2.1",
+    "ramda": "^0.25.0",
+    "ramda-extension": "^0.4.0",
     "react": "16.4.1",
     "react-dom": "16.4.1",
     "react-union": "^0.5.0",
