--- a/boilerplates/react-union-boilerplate-basic/package.json
+++ b/boilerplates/react-union-boilerplate-basic/package.json
@@ -19,8 +19,7 @@
   },
   "devDependencies": {
     "babel-eslint": "8.0.1",
-    "babel-plugin-universal-import": "3.0.0",
-    "babel-preset-react": "6.23.0",
+    "babel-preset-react-union": "^0.1.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
@@ -38,7 +37,7 @@
   "scripts": {
     "build": "react-union-scripts build --release",
     "start": "react-union-scripts start --app SampleApp",
-    "start:ssr-server": "node build/SampleApp/.ssr",
+    "start:ssr-server": "node build/SampleApp/server",
     "test": "react-union-scripts test",
     "lint": "yarn lint:eslint",
     "lint:eslint": "eslint --ext .js ./",
