--- a/packages/react-union-scripts/package.json
+++ b/packages/react-union-scripts/package.json
@@ -61,11 +61,15 @@
     "webpack-bundle-analyzer": "2.13.1",
     "webpack-dev-middleware": "3.1.3",
     "webpack-hot-middleware": "2.22.2",
+    "webpack-hot-server-middleware": "0.5.0",
     "webpack-manifest-plugin": "2.0.3",
     "webpack-merge": "^4.1.3"
   },
   "devDependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
+  },
+  "peerDependencies": {
+    "react-union": "^0.5.0"
   }
 }
