--- a/packages/react-union-ssr-server/package.json
+++ b/packages/react-union-ssr-server/package.json
@@ -9,17 +9,17 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cheerio": "1.0.0-rc.2",
-    "koa": "2.5.1",
-    "koa-bodyparser": "4.2.1",
+    "connect": "^3.6.6",
     "ramda": "^0.25.0",
     "ramda-extension": "^0.4.0",
     "react": "16.4.1",
     "react-dom": "16.4.1",
-    "react-union": "^0.5.0",
     "webpack-flush-chunks": "2.0.1"
   },
   "peerDependencies": {
+    "react-union": "^0.5.0",
     "react-universal-component": "^3.0.0"
   }
 }
