107 Removing babel-polyfill from react-union-scripts

--- a/boilerplates/react-union-boilerplate-monorepo/packages/union-app-sample-app/package.json
+++ b/boilerplates/react-union-boilerplate-monorepo/packages/union-app-sample-app/package.json
@@ -8,6 +8,7 @@
     "node": ">=8"
   },
   "dependencies": {
+    "babel-polyfill": "6.23.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-hot-loader": "^4.3.3",
