--- a/boilerplates/react-union-boilerplate-basic/package.json
+++ b/boilerplates/react-union-boilerplate-basic/package.json
@@ -8,6 +8,7 @@
     "node": ">=8"
   },
   "dependencies": {
+    "babel-polyfill": "6.23.0",
     "classnames": "2.2.5",
     "prop-types": "15.6.1",
     "react": "16.4.1",
