--- a/boilerplates/react-union-boilerplate-liferay-basic/package.json
+++ b/boilerplates/react-union-boilerplate-liferay-basic/package.json
@@ -8,6 +8,7 @@
     "node": ">=8"
   },
   "dependencies": {
+    "babel-polyfill": "6.23.0",
     "classnames": "2.2.5",
     "document-ready": "2.0.1",
     "prop-types": "15.6.0",
