--- a/packages/react-union/package.json
+++ b/packages/react-union/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-union",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "license": "MIT",
   "main": "lib/react-union.js",
   "module": "es/react-union.js",
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "babel-core": "^7.0.0-0",
-    "babel-preset-react-union": "0.7.0",
+    "babel-preset-react-union": "^0.7.1",
     "cross-env": "5.1.1",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
