--- a/boilerplates/react-union-boilerplate-basic/package.json
+++ b/boilerplates/react-union-boilerplate-basic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-union-boilerplate-basic",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "private": true,
   "license": "MIT",
   "repository": "https://github.com/lundegaard/react-union",
@@ -14,25 +14,25 @@
     "react": "16.4.1",
     "react-dom": "16.4.1",
     "react-hot-loader": "4.3.3",
-    "react-union": "^0.7.0",
+    "react-union": "^0.7.1",
     "redbox-react": "1.6.0"
   },
   "devDependencies": {
     "babel-core": "^7.0.0-0",
     "babel-eslint": "^9.0.0",
-    "babel-preset-react-union": "0.7.0",
+    "babel-preset-react-union": "^0.7.1",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "enzyme-to-json": "^3.3.4",
     "eslint": "^5.5.0",
+    "eslint-config-react-union": "^0.7.1",
     "eslint-plugin-babel": "^5.2.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-react": "^7.11.1",
-    "eslint-config-react-union": "0.7.0",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
     "prettier": "^1.13.5",
-    "react-union-scripts": "^0.7.0"
+    "react-union-scripts": "^0.7.1"
   },
   "scripts": {
     "build": "react-union-scripts build",
