removed carets so the greenkeeper can do his job

--- a/packages/react-union/package.json
+++ b/packages/react-union/package.json
@@ -20,23 +20,23 @@
   "dependencies": {
     "prop-types": "15.6.2",
     "ramda": "0.25.0",
-    "rollup-plugin-commonjs": "^9.1.6"
+    "rollup-plugin-commonjs": "9.1.6"
   },
   "devDependencies": {
-    "babel-core": "^7.0.0-0",
+    "babel-core": "7.0.0-bridge.0",
     "babel-preset-react-union": "0.7.1",
     "cross-env": "5.2.0",
-    "enzyme": "^3.6.0",
-    "enzyme-adapter-react-16": "^1.5.0",
-    "jsdom": "^12.0.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "rollup": "^0.65.2",
-    "rollup-plugin-babel": "^4.0.3",
-    "rollup-plugin-commonjs": "^9.1.6",
-    "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-terser": "^2.0.2"
+    "enzyme": "3.6.0",
+    "enzyme-adapter-react-16": "1.5.0",
+    "jsdom": "12.0.0",
+    "react": "16.4.1",
+    "react-dom": "16.4.1",
+    "rollup": "0.65.2",
+    "rollup-plugin-babel": "4.0.3",
+    "rollup-plugin-commonjs": "9.1.6",
+    "rollup-plugin-node-resolve": "3.4.0",
+    "rollup-plugin-replace": "2.0.0",
+    "rollup-plugin-terser": "2.0.2"
   },
   "peerDependencies": {
     "react": "^16.4.1",
