--- a/boilerplates/react-union-boilerplate-liferay-basic/package.json
+++ b/boilerplates/react-union-boilerplate-liferay-basic/package.json
@@ -8,33 +8,33 @@
     "node": ">=8"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
+    "@babel/polyfill": "7.0.0",
     "classnames": "2.2.6",
     "document-ready": "2.0.1",
     "prop-types": "15.6.2",
     "react": "16.5.0",
     "react-dom": "16.5.0",
     "react-hot-loader": "4.3.6",
-    "react-union": "^0.8.0",
+    "react-union": "0.8.0",
     "redbox-react": "1.6.0"
   },
   "devDependencies": {
-    "babel-core": "^7.0.0-0",
-    "babel-eslint": "^9.0.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "9.0.0",
     "babel-preset-react-union": "0.7.1",
-    "enzyme": "^3.6.0",
-    "enzyme-adapter-react-16": "^1.5.0",
-    "enzyme-to-json": "^3.3.4",
-    "eslint": "^5.5.0",
+    "enzyme": "3.6.0",
+    "enzyme-adapter-react-16": "1.5.0",
+    "enzyme-to-json": "3.3.4",
+    "eslint": "5.5.0",
     "eslint-config-react-union": "0.7.1",
-    "eslint-plugin-babel": "^5.2.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-react": "^7.11.1",
-    "husky": "^0.14.3",
-    "lint-staged": "^7.2.0",
+    "eslint-plugin-babel": "5.2.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-react": "7.11.1",
+    "husky": "0.14.3",
+    "lint-staged": "7.2.0",
     "mkdirp": "0.5.1",
     "prettier": "1.14.2",
-    "react-union-scripts": "^0.8.0",
+    "react-union-scripts": "0.8.0",
     "rimraf": "2.6.2"
   },
   "scripts": {
