--- a/packages/eslint-config-react-union/package.json
+++ b/packages/eslint-config-react-union/package.json
@@ -10,10 +10,10 @@
   "license": "MIT",
   "devDependencies": {
     "babel-eslint": "9.0.0",
-    "eslint": "^5.5.0",
-    "eslint-plugin-babel": "^5.2.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-react": "^7.11.1"
+    "eslint": "5.5.0",
+    "eslint-plugin-babel": "5.2.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-react": "7.11.1"
   },
   "peerDependencies": {
     "babel-eslint": "^9.0.0",
