--- a/packages/react-union-scripts/package.json
+++ b/packages/react-union-scripts/package.json
@@ -16,10 +16,10 @@
     "node": ">=8"
   },
   "dependencies": {
-    "babel-core": "^7.0.0-0",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^8.0.2",
-    "babel-preset-react-union": "^0.7.1",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "23.6.0",
+    "babel-loader": "8.0.2",
+    "babel-preset-react-union": "0.7.1",
     "browser-sync": "2.24.7",
     "bundle-loader": "0.5.6",
     "clean-webpack-plugin": "0.1.19",
@@ -31,7 +31,7 @@
     "fs-extra": "7.0.0",
     "glob": "7.1.3",
     "html-webpack-plugin": "3.2.0",
-    "http-proxy-middleware": "^0.19.0",
+    "http-proxy-middleware": "0.19.0",
     "invariant": "2.2.4",
     "jest": "23.6.0",
     "mkdirp": "0.5.1",
@@ -42,17 +42,17 @@
     "react-hot-loader": "4.3.6",
     "resolve-url-loader": "2.3.1",
     "style-loader": "0.23.0",
-    "uglifyjs-webpack-plugin": "^1.2.5",
+    "uglifyjs-webpack-plugin": "1.2.5",
     "url-loader": "1.1.1",
     "webpack": "4.18.0",
     "webpack-bundle-analyzer": "3.0.2",
     "webpack-dev-middleware": "3.3.0",
     "webpack-hot-middleware": "2.23.1",
     "webpack-manifest-plugin": "2.0.4",
-    "webpack-merge": "^4.1.3"
+    "webpack-merge": "4.1.3"
   },
   "devDependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react": "16.4.1",
+    "react-dom": "16.4.1"
   }
 }
