removing misplaced rollup-plugin-commonjs from dependencies

--- a/packages/react-union/package.json
+++ b/packages/react-union/package.json
@@ -19,8 +19,7 @@
   ],
   "dependencies": {
     "prop-types": "15.6.2",
-    "ramda": "0.25.0",
-    "rollup-plugin-commonjs": "9.1.6"
+    "ramda": "0.25.0"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
