--- a/boilerplates/react-union-boilerplate-basic/package.json
+++ b/boilerplates/react-union-boilerplate-basic/package.json
@@ -30,7 +30,7 @@
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-react": "7.11.1",
     "husky": "0.14.3",
-    "lint-staged": "7.2.0",
+    "lint-staged": "7.2.2",
     "prettier": "1.14.2",
     "react-union-scripts": "0.8.0"
   },
@@ -49,10 +49,12 @@
     ]
   },
   "lint-staged": {
-    "**/*.js": [
-      "prettier --write",
-      "yarn lint --fix",
-      "git add"
-    ]
+    "linters": {
+      "**/*.js": [
+        "prettier --write",
+        "yarn lint --fix",
+        "git add"
+      ]
+    }
   }
 }
