--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
   ],
   "scripts": {
     "example:basic": "cd boilerplates/react-union-boilerplate-basic && yarn start",
-    "example:ssr": "cd boilerplates/react-union-boilerplate-basic && yarn build && yarn start:ssr-server",
+    "example:ssr-basic": "cd boilerplates/react-union-boilerplate-ssr-basic && yarn start",
+    "example:ssr-basic-server":
+      "cd boilerplates/react-union-boilerplate-ssr-basic && yarn build && yarn start:ssr-server",
     "lint": "eslint \"packages/**/*.js\" \"boilerplates/**/*.js\"",
     "lint:fix": "yarn lint --fix",
     "test": "jest",
